<resources>
    <string name="app_name">TemanTani</string>
    <string name="welcome">Selamat Pagi, </string>
    <string name="selamat_datang">Selamat Datang.</string>
    <string name="menu">Kalkulator Pupuk</string>
    <string name="detection"> Deteksi</string>
    <string name="treatment"> Perawatan</string>
    <string name="shop"> Toko</string>
    <string name="calculator"> Kalkulator Pupuk</string>
    <string name="ask"> Tanya Ahli</string>
    <string name="community">Komunitas</string>
    <string name="capture">Capture</string>
    <string name="gallery">Gallery</string>

    <string name="logo">logo</string>
    <string name="img_splash">Image Splash</string>

    <string name="greetings">Selamat Datang di Teman Tani</string>
    <string name="caption_greetings">Rawat Tanaman Anda Lebih Mudah</string>

    <string name="result_detection">Hasil Deteksi</string>
    <string name="gejala">Gejala</string>
    <string name="deskripsi_gejala">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet at aut beatae commodi consectetur delectus, distinctio dolore ea explicabo impedit labore magnam molestias nihil possimus, quo sint vel veniam.</string>
    <string name="recomendation">Rekomendasi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="plants">Tanaman</string>
    <string name="disease">Penyakit</string>

    <string name="detail">Lihat Selengkapnya</string>
    <string name="title_diseases">Blas Daun</string>
    <string name="latin_diseases">Leaf Blast</string>
    <string name="cause">Jamur</string>
    <string name="plants_diseases">Padi</string>

    <string name="total_diseases">3 Penyakit</string>
    <string name="yakin">Apakah anda ingin mengupload ?</string>

    <string name="go_to_link">Go To Link</string>
    <string name="recomendation_title">Rekomen</string>
    <string name="api_key">154c991c-1c07-492b-907c-6d3945759fd1</string>



</resources>