<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_plants"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp"
    android:clipToPadding="false"
    android:clipChildren="false"
    card_view:cardElevation="20dp"
    card_view:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" >


        <ImageView
            android:id="@+id/previewImageDiseases"
            android:layout_width="107dp"
            android:layout_height="110dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/img_row_diseases" />


        <TextView
            android:id="@+id/tv_title_plants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.033"
            card_view:layout_constraintStart_toEndOf="@+id/previewImageDiseases"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.264"
            tools:text="@string/title_diseases" />

        <TextView
            android:id="@+id/tv_latin_plants"
            android:layout_width="44dp"
            android:layout_height="14dp"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/black"
            android:textSize="8sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.029"
            card_view:layout_constraintStart_toEndOf="@+id/previewImageDiseases"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.598"
            tools:text="@string/latin_diseases" />

        <TextView
            android:id="@+id/tv_total_diseases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/detail"
            android:textColor="@color/black"
            android:textSize="12dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.969"
            card_view:layout_constraintStart_toEndOf="@+id/previewImageDiseases"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_latin_plants"
            card_view:layout_constraintVertical_bias="0.384" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>